# KatomaranPSGHackathon_22PT17

./: .gitignore  README.md  docker-compose.yml
apps/backend/: .dockerignore  Dockerfile  README.md  index.js  package-lock.json  package.json
apps/backend/routes/: health.js  logs.js  push.js  register.js
apps/backend/tests/unit/: health.test.js  ws-server.test.js
apps/backend/utils/: logger.js  metrics.js
apps/backend/ws/: server.js
apps/frontend/: .dockerignore  Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
apps/frontend/src/: App.css  App.jsx  index.css  main.jsx
apps/frontend/src/components/: ChatBox.jsx  ErrorBoundary.jsx  FaceList.jsx  FaceRecognitionLive.jsx  FaceRegistrationForm.jsx  Navigation.jsx
apps/frontend/src/context/: AppContext.jsx
apps/frontend/src/pages/: Admin.jsx  ChatBot.jsx
apps/frontend/src/services/: api.js
apps/frontend/src/styles/: ChatBox.css  ErrorBoundary.css  FaceList.css  FaceRecognitionLive.css  FaceRegistrationForm.css  Navigation.css
apps/frontend/src/utils/: logger.js
database/: README.md
docs/: DEPLOYMENT.md  DEVELOPMENT.md  OPERATIONS.md  README.md  SECURITY.md  TESTING.md
logs/: README.md
scripts/: README.md  dev.sh
services/face-recognition/: README.md
services/face-registration/: .dockerignore  Dockerfile  main.py  pyproject.toml
services/face-registration/routes/: faces.py  recognize.py  register.py
services/face-registration/utils/: compare.py  encoding.py  logger.py
services/rag-engine/: Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
services/rag-engine/rag/: chat.py  index.py
services/rag-engine/utils/: logger.py
tests/performance/backend/: load-test.js  stress-test.js
tests/performance/frontend/: lighthouse-test.js
tests/performance/services/: face-recognition-benchmark.py
