[project]
name = "Face-Registration"
version = "1.0.0"
description = "API for face registration and recognition"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dlib",
    "face-recognition>=1.3.0",
    "fastapi>=0.115.12",
    "loguru>=0.7.3",
    "numpy>=2.2.5",
    "pillow>=11.2.1",
    "pydantic>=2.11.4",
    "python-jose>=3.4.0",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.2",
]

[tool.uv.sources]
dlib = { path = "dlib-19.24.99-cp312-cp312-win_amd64.whl" }
